# libmwmysql

./: CMakeLists.txt  MySqlConnPool.cpp  MySqlConnPool.h  MySqlHelper.cpp  MySqlHelper.h  MySqlWapper.dsp  SQLConnection.cpp  SQLConnection.h  SQLException.cpp  SQLException.h  SQLField.cpp  SQLField.h  SQLTypes.h  build-release.sh  build.sh  makefile  makefile_ar  使用说明.txt
mwmysql/examples/: CMakeLists.txt  test.cpp
mwmysql/src/: CMakeLists.txt  MySqlOperator.cpp  MySqlOperator.h  SQLBase.cpp  SQLBase.h  SQLConnection.cpp  SQLConnection.h  SQLResult.cpp  SQLResult.h  SQLValue.cpp  SQLValue.h
